tests/scale_codec_ui/discriminant_overflow.rs
#[derive(::parity_scale_codec::Decode, ::parity_scale_codec::Encode)]
#[codec(crate = ::parity_scale_codec)]
enum T {
	A = 256,
}

fn main() {}
